Model files for project report updated

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ Learning/\.idea/workspace\.xml
 Learning/\.ipynb_checkpoints/
 
 Pre-processing/\.ipynb_checkpoints/
+
+Modelling/\.ipynb_checkpoints/
